Fix wall on mobile and other small fixes

--- a/web/public/desktop.css
+++ b/web/public/desktop.css
@@ -67,3 +67,7 @@ nav {
 .arrow-down-icon {
   margin-top: -12px;
 }
+
+.popup-menu {
+  margin-top: -10px;
+}
