--- a/web/public/mobile.css
+++ b/web/public/mobile.css
@@ -255,7 +255,3 @@ a.compose-new-button {
 .post .popup-menu {
   opacity: 1;
 }
-
-.popup-menu {
-  margin-top: 12px;
-}
